<resources>
    <string-array name="distances_array">
        <item>500m</item>
        <item>1km</item>
        <item>2km</item>
        <item>5km</item>
        <item>10km</item>
    </string-array>
    <string name="app_name">Healthy Lifers</string>
    <string name="title_map">Map</string>
    <string name="title_myfriends">My friends</string>
    <string name="title_myprofile">My profile</string>
    <string name="title_world_score">Wold score</string>
    <string name="app_bar_search">Search</string>
    <string name="app_bar_settings_title">Settings</string>
    <string name="btnExit_title">Exit</string>
    <string name="FriendNameTitle">Name and surname</string>
    <string name="FriendUsername">Username</string>
    <string name="FriendPoints">Points</string>
    <string name="exit_button_text">x</string>
    <string name="profilPicDesription">Profile picture</string>
    <string name="btnSignIn">Sign in</string>
    <string name="btnRegister">Register</string>
    <string name="sign_in_text">Or you can sign in with:</string>
    <string name="btnEditMP_text">Edit</string>
    <string name="NameTextMP">Name:</string>
    <string name="SurnameTextMP">Surname:</string>
    <string name="ChangePassText">Change password</string>
    <string name="OK_text">Ok</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="Cancel_text">Cancel</string>
    <string name="textView_PlaceNeme">Place name</string>
    <string name="dateLabel">Added </string>
    <string name="CommentLabel">Comments</string>
    <string name="log_out_text">Are you sure you want to log out?</string>
    <string name="location_service">Location service</string>
    <string name="app_guide">Appliaction guide</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="add_image">Add image</string>
    <string name="leftpar">(</string>
    <string name="rightpar">)</string>
    <string name="btnExitTextFP">\b\b</string>
    <string name="delete_friend_text">Are you sure you want to delete your friend?</string>
    <string name="hello_blank_fragment" />
    <string name="addFriend_label">Add friend</string>
    <string name="changePass_text">Change Password</string>
    <string name="passError_oldPass">*Your old password appears to be incorrect</string>
    <string name="passError_matchPass">*Passwords need to match</string>
    <string name="post_button">Post</string>
    <string name="location_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
</resources>
