<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageView_ProfilePicMP"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        tools:srcCompat="@tools:sample/avatars" />
    <LinearLayout
        android:id="@+id/LinearLayout_UserInfo"
        android:layout_below="@id/imageView_ProfilePicMP"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants"
        >
        <TextView
            android:id="@+id/textView_NameSurnameMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:text="@string/FriendNameTitle"
            />
        <TextView
            android:id="@+id/textView_UsernameMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:layout_marginTop="50dp"
            android:text="@string/FriendUsername"/>
        <TextView
            android:id="@+id/textView_PointsMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:layout_marginTop="50dp"
            android:text="@string/FriendPoints"/>

        <Button
            android:id="@+id/button_EditMP"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:textColor="@color/colorPrimary"
            android:text="@string/btnEditMP_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_EditUserInfo"
        android:layout_below="@id/imageView_ProfilePicMP"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:descendantFocusability="blocksDescendants"
        >

        <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/NameTextMP"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/EditText_NameMP"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/SurnameTextMP"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"

            android:textColor="@android:color/white" />
        <EditText
            android:id="@+id/EditText_SurnameMP"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            />

        <TextView
            android:id="@+id/textView_changePassMP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/ChangePassText"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:textColor="@android:color/white"
            android:textStyle="italic" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/button_OkMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:text="@string/OK_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="@color/colorPrimaryLighter"


                />

            <Button
                android:id="@+id/button_CancelMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/Cancel_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="@color/colorPrimaryLighter"

                />
            </LinearLayout>
    </LinearLayout>
</RelativeLayout>