<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layoutFriend"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    >


    <ImageView
        android:id="@+id/imageView_ProfilePic"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profilPicDesription" />

    <TextView
        android:id="@+id/textView_NameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/imageView_ProfilePic"
        android:layout_toRightOf="@+id/imageView_ProfilePic"
        android:text="@string/FriendNameTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryLighter" />

    <TextView
        android:id="@+id/textView_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_NameSurname"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView_ProfilePic"
        android:layout_toRightOf="@+id/imageView_ProfilePic"
        android:text="@string/FriendUsername"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryLighter"/>

    <TextView
        android:id="@+id/textView_Points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_Username"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/imageView_ProfilePic"
        android:layout_toRightOf="@+id/imageView_ProfilePic"
        android:text="@string/FriendPoints"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryLighter"/>

    <Button
        android:id="@+id/button_deleteFriend"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_states"

        android:text="@string/exit_button_text" />
</RelativeLayout>