<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignIn"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/healthy_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:src="@drawable/main_home1_770x350" />

    <android.support.design.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="10dp"
        android:requiresFadingEdge="vertical"
        android:text="@string/btnSignIn"

        />

    <android.support.design.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/btnRegister"
        android:background="@drawable/rounded_button"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorSignInText"
        />

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btnExit_title"
        android:src="@drawable/icons8-google-80"
        />



</LinearLayout>