<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    >


    <TextView
        android:id="@+id/textView_NameSurnameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/FriendNameTitle"
        android:textColor="@color/colorPrimaryLighter"/>

    <TextView
        android:id="@+id/textView_UsernameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_NameSurnameScore"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/FriendUsername" />

    <TextView
        android:id="@+id/textView_PointsScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryLighter"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/FriendPoints" />
</RelativeLayout>