<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutFriend"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLighter"
    android:descendantFocusability="blocksDescendants"
    >


    <ImageView
        android:id="@+id/imageView_PlacePicPI"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profilPicDesription" />

    <TextView
        android:id="@+id/textView_PlaceNamePI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_toEndOf="@+id/imageView_PlacePicPI"
        android:layout_toRightOf="@+id/imageView_PlacePicPI"
        android:text="@string/textView_PlaceNeme"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView_DatePI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_PlacePicPI"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/dateLabel"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView_commentFI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_PlacePicPI"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_toEndOf="@+id/textView_DatePI"
        android:layout_toRightOf="@+id/textView_DatePI"
        android:text="@string/CommentLabel"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView_LikePicFI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_PlacePicPI"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toEndOf="@+id/TextView_commentFI"
        android:layout_toRightOf="@+id/TextView_commentFI"
        app:srcCompat="@drawable/baseline_thumb_up_24" />

    <TextView
        android:id="@+id/TextView_likeNumFI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_PlacePicPI"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView_LikePicFI"
        android:layout_toRightOf="@+id/imageView_LikePicFI"

        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView_dislikePicFI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_PlacePicPI"
        android:layout_toEndOf="@+id/TextView_likeNumFI"
        android:layout_toRightOf="@+id/TextView_likeNumFI"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/baseline_thumb_down_24" />

    <TextView
        android:id="@+id/TextView_dislikeNumFI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_PlacePicPI"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView_dislikePicFI"
        android:layout_toRightOf="@+id/imageView_dislikePicFI"
        android:textSize="12sp" />

</RelativeLayout>