<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/log_out_window"
    >

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/changePass_text"
        android:textAllCaps="false"
        android:textSize="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/EditText_oldPassDCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="Old Password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/EditText_newPassDCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="New Password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/EditText_confirmPassDCP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/TextView_ErrorDCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="end"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_okDCP"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/OK_text"
            android:background="@drawable/button_main"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"

            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancelDCP"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:background="@drawable/button_main"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/Cancel_text"


            />


    </LinearLayout>


</LinearLayout>